Bump version to 1.3.1